[package]
name = "learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Section "header" - from this place until next section there are stored all deendencies
# Semantic versioning is used
[dependencies] 

# 0.8.5 it is shortcut for ^0.8.5 (0.8.5 - 0.9.0)
rand = "0.8.5" 